Solved bug of project hover on Firefox and add hover animations.

--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -4,18 +4,37 @@
   font-family: "Montserrat-Bold", sans-serif;
 }
 
-#projects{
+#projects {
   overflow: hidden;
+}
+
+.project {
+  position: relative;
+  border-radius: 50px;
+  overflow: hidden;
+  width: 80%;
+  margin: 3rem auto;
+  display: none;
+  transform: translateY(50%);
+  opacity: 0;
+  transition: all 1s ease-out;
+  cursor: pointer;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3), 0 20px 20px rgba(0, 0, 0, 0.1);
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.3;
+  transition: all 0.5s ease-in;
+  z-index: 2;
 }
 
 .content {
   position: relative;
-  border-radius: 50px;
-  overflow: hidden;
-  margin: 2rem 0;
-  cursor: pointer;
   height: 300px;
-  box-shadow: 0 10px 10px rgba(0,0,0,0.3), 0 20px 20px rgba(0,0,0,0.1);
 }
 
 .details {
@@ -29,28 +48,10 @@
   border: 2px solid white;
   padding: 0.5rem 1.5rem;
   transition: all 0.3s ease-in;
-  z-index: 2;
-}
-
-.overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  opacity: 0.3;
-  border-radius: 50px;
-  transition: all 0.5s ease-in;
-  z-index: 1;
-}
-
-.project {
-  width: 80%;
-  margin: auto;
-  display: none; /* Hide columns by default */
-  transform: translateY(50%);
-  opacity: 0;
-  transition: all 1s ease-out;
-  //opacity: 0;
+  z-index: 3;
+  background-image: linear-gradient(to left, transparent, transparent 50%, $primary-color 50%, $secondary-color);
+  background-position: 100% 0;
+  background-size: 200% 100%;
 }
 
 .project.slide-in {
@@ -66,42 +67,33 @@
   right: 10%;
   font-size: 1.6rem;
   transition: all 0.3s ease-in;
-  z-index: 2;
+  z-index: 3;
 }
 
 .project-image {
   width: 100%;
   height: 100%;
   display: block;
-  //object-fit: scale-down;
   transition: all 0.3s ease-in;
   z-index: 2;
 }
 
-.content:hover, .content:focus {
+.project:hover, .project:focus {
   .details {
     bottom: 20%;
     opacity: 0.8;
-    z-index: 2;
   }
 
   .details:hover, .details:focus {
-    background: $gradient;
+    background-position: 0 0;
   }
 
   .overlay {
-    z-index: 1;
     opacity: 0.5;
   }
 
   .project-title {
-    z-index: 2;
     bottom: 50%;
-  }
-
-  .project-image {
-    z-index: 2;
-    transform: scale(1.2);
   }
 }
 
